Sun Apr 26 17:24:42 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: must compile
	  initializer.

	* net/loveruby/cflat/compiler/IRGenerator.java: f = &puts
	  generated addr(addr(puts)), so remove redundant AddressNode.

	* net/loveruby/cflat/compiler/CodeGenerator.java: now
	  --verbose-asm works.

Sun Apr 26 16:51:02 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: treat LHS
	  specially and remove AddressNode at the top of the LHS tree (e.g.
	  printf = 0 generates &printf = 0).

Sun Apr 26 16:19:31 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Simplifier.java -> IRGenerator.java

	* net/loveruby/cflat/compiler/Compiler.java: rename class.

Sun Apr 26 16:10:27 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Simplifier.java (SwitchNode):
	  missing end label.

Sun Apr 26 15:48:10 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/FuncallNode.java: make a static funcall
	  really static funcall (not use pointer).

	net/loveruby/cflat/compiler/Simplifier.java: set aref result type.

Sun Apr 26 13:50:54 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/FuncallNode.java: detect static call.

Sun Apr 26 13:30:10 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Simplifier.java (While): must loop.

Sun Apr 26 13:22:39 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Simplifier.java (SuffixOp): too few
	  deref.

	* net/loveruby/cflat/compiler/Simplifier.java (MemberNode): should
	  set type.

	* net/loveruby/cflat/compiler/Simplifier.java (PtrMemberNode):
	  should set type.

	* net/loveruby/cflat/compiler/Simplifier.java (Deref, Addr):
	  should compile child expr.

	* net/loveruby/cflat/ast/BinaryOpNode.java (ctor): accept type.

	* net/loveruby/cflat/ast/TypeNode.java (location): do not raise
	  exception when no typeRef exist.
