@@ -1,3 +1,8 @@
+Sun Apr 26 17:44:14 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/IRGenerator.java (SuffixOp): do not
+	  calculate twice.  Save expr value and reuse it.
+
 Sun Apr 26 17:24:42 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/IRGenerator.java: must compile
